FIXED THE OVERFLOW

--- a/portfolio_v2/css/style.css
+++ b/portfolio_v2/css/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  overflowX: hidden;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
@@ -205,5 +205,6 @@ section#contact a{
   font-weight: bold;
 
 }
+
 
 
